--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -5,132 +5,162 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/backgroundwhite"
     tools:context="com.example.lenovo.myfinance.Fragments.Categories_fragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout
-        android:id="@+id/TopInfo_relative"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-
-        >
-
+        android:layout_height="match_parent">
         <RelativeLayout
-            android:id="@+id/TopInfo_linear"
+            android:id="@+id/TopInfo_relative"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/layout_shape"
-            android:padding="10dp"
-            android:elevation="20dp"
+            android:layout_gravity="top"
+
             >
-            <LinearLayout
+
+            <RelativeLayout
+                android:id="@+id/TopInfo_linear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="4">
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/layout_shape"
+                android:padding="10dp"
+                android:elevation="20dp"
+                >
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp"
-                    android:layout_weight="1"
-
-                    >
-                    <TextView
-                        android:id="@+id/income_text"
+                    android:orientation="horizontal"
+                    android:weightSum="4">
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="INCOME:"
-                        android:textSize="10sp"
-                        android:textColor="@color/white" />
-                    <TextView
-                        android:id="@+id/income_amount"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:text="500"
-                        android:padding="5dp"
-                        android:gravity="center"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/amount_back"
-                        android:textColor="@color/white"
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp"
-                    android:layout_weight="2">
-                    <TextView
-                        android:id="@+id/expense_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="EXPENSE:"
-                        android:textSize="10sp"
-                        android:textColor="@color/white" />
-                    <TextView
-                        android:id="@+id/expense_amount"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:text="500"
-                        android:padding="5dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center"
-                        android:layout_gravity="center_horizontal"
-                        android:background="@drawable/amount_back"
-                        android:textColor="@color/white"
-                        />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp"
-                    android:layout_weight="1">
-                    <TextView
-                        android:id="@+id/balance_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="BALANCE:"
-                        android:textSize="10sp"
-
-                        android:textColor="@color/white" />
-                    <TextView
-                        android:id="@+id/balance_amount"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:text="500"
-                        android:gravity="center"
+                        android:orientation="vertical"
                         android:padding="5dp"
                         android:layout_weight="1"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/amount_back"
-                        android:layout_gravity="center_horizontal"
-                        android:textColor="@color/white"
-                        />
+
+                        >
+                        <TextView
+                            android:id="@+id/income_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="INCOME:"
+                            android:textSize="10sp"
+                            android:textColor="@color/white" />
+                        <TextView
+                            android:id="@+id/income_amount"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:text="500"
+                            android:padding="5dp"
+                            android:gravity="center"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="5dp"
+                            android:background="@drawable/amount_back"
+                            android:textColor="@color/white"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_weight="2">
+                        <TextView
+                            android:id="@+id/expense_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="EXPENSE:"
+                            android:textSize="10sp"
+                            android:textColor="@color/white" />
+                        <TextView
+                            android:id="@+id/expense_amount"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:text="500"
+                            android:padding="5dp"
+                            android:layout_marginTop="5dp"
+                            android:gravity="center"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/amount_back"
+                            android:textColor="@color/white"
+                            />
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_weight="1">
+                        <TextView
+                            android:id="@+id/balance_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="BALANCE:"
+                            android:textSize="10sp"
+
+                            android:textColor="@color/white" />
+                        <TextView
+                            android:id="@+id/balance_amount"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:text="500"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="5dp"
+                            android:background="@drawable/amount_back"
+                            android:layout_gravity="center_horizontal"
+                            android:textColor="@color/white"
+                            />
+                    </LinearLayout>
+
                 </LinearLayout>
 
-            </LinearLayout>
 
 
+            </RelativeLayout>
 
+            <ImageView
+                android:id="@+id/category_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="68dp"
+                android:elevation="20dp"
+                android:src="@drawable/categories" />
         </RelativeLayout>
+        <Button
+            android:text="Add new Category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textSize="10sp"
+            android:textColor="@color/white"
+            android:background="@drawable/button_shape"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="8dp"/>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/categories_tablayout"
+            android:background="@drawable/uptab_shape"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabTextColor="@color/white"
+            app:tabIndicatorHeight="1dp"
+            app:tabIndicatorColor="@color/darkturq"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/categories_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
 
-        <ImageView
-            android:id="@+id/category_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="68dp"
-            android:elevation="20dp"
-            android:src="@drawable/categories" />
-    </RelativeLayout>
+    <!-- TODO: Update blank fragment layout -->
+
 
 </FrameLayout>
