--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,54 +10,16 @@
         android:id="@+id/toolbar"
         layout="@layout/tool_bar"
         />
-
-        <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/colorPrimaryDark"
+    <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerlayout"
-        tools:context="com.example.lenovo.myfinance.MainActivity">
-
-        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:id="@+id/mainactivity_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:context="com.example.lenovo.myfinance.Main2Activity">
-
-
-                <FrameLayout
-                    android:id="@+id/fragment_frame"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_above="@+id/navigation"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
-
-                <android.support.design.widget.BottomNavigationView
-                    android:id="@+id/navigation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/toolbar_background"
-                    android:layout_alignParentBottom="true"
-                    app:menu="@menu/navigation" />
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
+            android:layout_height="match_parent"/>
         <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_main"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:menu="@menu/navigation_menu"
@@ -66,6 +28,9 @@
             android:layout_gravity="start"/>
 
     </android.support.v4.widget.DrawerLayout>
+
+
+
 
 
 
