--- a/app/src/main/res/layout/income_category_layout.xml
+++ b/app/src/main/res/layout/income_category_layout.xml
@@ -9,10 +9,11 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
+        android:id="@+id/category_image_imageview"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:elevation="10dp"
         android:layout_gravity="center_vertical"
+        android:elevation="20dp"
         android:src="@drawable/category_shape"/>
     <TextView
         android:id="@+id/income_category_name"
