--- a/app/src/main/res/layout/income_transaction_detail.xml
+++ b/app/src/main/res/layout/income_transaction_detail.xml
@@ -52,6 +52,7 @@
                 android:layout_toRightOf="@id/income_category_image"
                 android:padding="2dp"
                 android:hint="category name"
+                android:textStyle="bold"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="10sp" />
 
@@ -72,6 +73,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 android:text="+"
                 android:textColor="@color/darkturq"/>
 
