--- a/app/src/main/res/layout/transfer_transaction_detail.xml
+++ b/app/src/main/res/layout/transfer_transaction_detail.xml
@@ -69,14 +69,12 @@
             android:orientation="horizontal"
             android:padding="15dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_marginRight="5dp"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="-"
-                android:textColor="@color/red"/>
+                android:src="@drawable/transfer_icon"
+                android:textColor="@color/darkturq"/>
 
             <TextView
                 android:id="@+id/currency_sign_textview"
