add category dialog

--- a/app/src/main/res/layout/fragment_category_expense.xml
+++ b/app/src/main/res/layout/fragment_category_expense.xml
@@ -5,6 +5,7 @@
     tools:context="com.example.lenovo.myfinance.Fragments.category_expense_fragment">
 
    <android.support.v4.widget.SwipeRefreshLayout
+       android:id="@+id/category_expense_swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
