--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -135,6 +135,7 @@
                 android:src="@drawable/categories" />
         </RelativeLayout>
         <Button
+            android:id="@+id/addCategory_button"
             android:text="Add new Category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
