--- a/app/src/main/res/layout/fragment_category_income.xml
+++ b/app/src/main/res/layout/fragment_category_income.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.lenovo.myfinance.Fragments.category_income_fragment">
    <android.support.v4.widget.SwipeRefreshLayout
+       android:id="@+id/category_income_swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <android.support.v7.widget.RecyclerView
