add new category

--- a/app/src/main/res/layout/dialog_add_category.xml
+++ b/app/src/main/res/layout/dialog_add_category.xml
@@ -40,5 +40,11 @@
         android:verticalSpacing="10dp"
         android:columnWidth="60dp"
         android:stretchMode="spacingWidthUniform"/>
+    <!--<android.support.v7.widget.RecyclerView-->
+         <!--android:id="@+id/addcategory_recyclerview"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/choose_image_text"-->
+        <!--android:padding="5dp"/>-->
 
 </RelativeLayout>
