--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -31,85 +31,25 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/layout_shape"
-                android:padding="10dp"
-                android:elevation="20dp"
+                android:padding="15dp"
+                android:elevation="10dp"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="4">
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="5dp"
-                        android:layout_weight="1"
+                    android:padding="5dp"
+                    android:weightSum="3">
 
-                        >
-                        <TextView
-                            android:id="@+id/income_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="INCOME:"
-                            android:textSize="10sp"
-                            android:textColor="@color/white" />
-                        <TextView
-                            android:id="@+id/income_amount"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:text="500"
-                            android:padding="5dp"
-                            android:gravity="center"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/amount_back"
-                            android:textColor="@color/white"
-                            />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="5dp"
-                        android:layout_weight="2">
-                        <TextView
-                        android:id="@+id/expense_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="EXPENSE:"
-                        android:textSize="10sp"
-                        android:textColor="@color/white" />
-                        <TextView
-                        android:id="@+id/expense_amount"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:text="500"
-                        android:padding="5dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center"
-                        android:layout_gravity="center_horizontal"
-                        android:background="@drawable/amount_back"
-                        android:textColor="@color/white"
-                        />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="5dp"
-                        android:layout_weight="1">
                         <TextView
                         android:id="@+id/balance_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="BALANCE:"
-                        android:textSize="10sp"
-
+                        android:layout_gravity="center_vertical"
+                        android:text="BALANCE :"
+                        android:textSize="15sp"
+                        android:gravity="center"
+                         android:layout_weight="1"
                         android:textColor="@color/white" />
                         <TextView
                         android:id="@+id/balance_amount"
@@ -118,13 +58,12 @@
                         android:text="500"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:layout_weight="1"
-                        android:layout_marginTop="5dp"
+                        android:layout_weight="2"
                         android:background="@drawable/amount_back"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_gravity="center_vertical"
                         android:textColor="@color/white"
                         />
-                    </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -138,8 +77,8 @@
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/exchange"
-                android:layout_marginTop="68dp"
-                android:elevation="20dp"/>
+                android:layout_marginTop="55dp"
+                android:elevation="10dp"/>
         </RelativeLayout>
         <Button
             android:id="@+id/addtransaction_button"
@@ -159,12 +98,17 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swiperefresh_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp">
             <android.support.v7.widget.RecyclerView
+                android:background="@drawable/calculator_button"
                 android:id="@+id/income_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
+                android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/TopInfo_relative" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
