--- a/app/src/main/res/layout/bottomsheet_transaction.xml
+++ b/app/src/main/res/layout/bottomsheet_transaction.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/income_bottom_sheet"
-    android:fitsSystemWindows="true"
+
     android:elevation="3dp"
     android:layout_gravity="top"
     android:background="@drawable/backgroundwhite"
@@ -26,54 +26,6 @@
            android:elevation="15dp"
             >
 
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:background="@color/colorPrimaryDark"-->
-                <!--android:padding="10dp"-->
-                <!--android:layout_marginBottom="2dp"-->
-                <!--android:orientation="horizontal"-->
-              <!--&gt;-->
-                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:text="from"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:padding="10dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:textSize="10sp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:gravity="center"/>&ndash;&gt;-->
-                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:id="@+id/categoryname_indialog"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:text="INCOME"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:padding="10dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_weight="2"/>&ndash;&gt;-->
-                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_weight="1"/>&ndash;&gt;-->
-                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:textSize="10sp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:text="To"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:gravity="center"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:padding="10dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_weight="1"/>&ndash;&gt;-->
-                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:padding="10dp"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:text="ACCOUNT"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:gravity="center"&ndash;&gt;-->
-                    <!--&lt;!&ndash;android:layout_weight="2"/>&ndash;&gt;-->
-               <!---->
-            <!--</LinearLayout>-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -114,7 +66,42 @@
                 android:layout_marginLeft="5dp"
                 android:elevation="10dp"/>
         </LinearLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:hint="Describe transaction "
+            android:background="@drawable/transaction_detail_background1"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:inputType="text"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"/>
+        <LinearLayout
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:weightSum="3">
 
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_weight="2"
+                android:background="@drawable/transaction_detail_background1"
+                android:layout_gravity="center_vertical"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/amount_back"
+                android:text="Add image"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+
+                android:layout_gravity="center_vertical"/>
+        </LinearLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
