--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -50,9 +50,10 @@
                             android:textColor="@color/white" />
                         <TextView
                             android:id="@+id/income_amount"
-                            android:layout_width="50dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="500"
+                            android:maxLines="1"
                             android:padding="5dp"
                             android:gravity="center"
                             android:layout_gravity="center_horizontal"
@@ -77,9 +78,10 @@
                             android:textColor="@color/white" />
                         <TextView
                             android:id="@+id/expense_amount"
-                            android:layout_width="50dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="500"
+                            android:maxLines="1"
                             android:padding="5dp"
                             android:layout_marginTop="5dp"
                             android:gravity="center"
