--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -10,137 +10,28 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <RelativeLayout
-            android:id="@+id/TopInfo_relative"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-
-            >
-
-            <RelativeLayout
-                android:id="@+id/TopInfo_linear"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="2">
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/piechart_transactions"
+                android:elevation="10dp"
+                android:padding="10dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/layout_shape"
-                android:padding="10dp"
-                android:elevation="20dp"
-                >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="4">
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="5dp"
-                        android:layout_weight="1"
+                android:layout_weight="1"/>
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/linechart_transactions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
-                        >
-                        <TextView
-                            android:id="@+id/income_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="INCOME:"
-                            android:textSize="10sp"
-                            android:textColor="@color/white" />
-                        <TextView
-                            android:id="@+id/income_amount"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:text="500"
-                            android:padding="5dp"
-                            android:gravity="center"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/amount_back"
-                            android:textColor="@color/white"
-                            />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="5dp"
-                        android:layout_weight="2">
-                        <TextView
-                            android:id="@+id/expense_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="EXPENSE:"
-                            android:textSize="10sp"
-                            android:textColor="@color/white" />
-                        <TextView
-                            android:id="@+id/expense_amount"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:text="500"
-                            android:padding="5dp"
-                            android:layout_marginTop="5dp"
-                            android:gravity="center"
-                            android:layout_gravity="center_horizontal"
-                            android:background="@drawable/amount_back"
-                            android:textColor="@color/white"
-                            />
+        </LinearLayout>
 
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="5dp"
-                        android:layout_weight="1">
-                        <TextView
-                            android:id="@+id/balance_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="BALANCE:"
-                            android:textSize="10sp"
-
-                            android:textColor="@color/white" />
-                        <TextView
-                            android:id="@+id/balance_amount"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:text="500"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:layout_weight="1"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/amount_back"
-                            android:layout_gravity="center_horizontal"
-                            android:textColor="@color/white"
-                            />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-
-            </RelativeLayout>
-
-            <ImageView
-                android:id="@+id/report_image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="68dp"
-                android:elevation="20dp"
-                android:src="@drawable/analytics" />
-        </RelativeLayout>
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/piechart_transactions"
-            android:elevation="10dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="400sp"
-            android:layout_height="400sp"/>
     </LinearLayout>
 
     <!-- TODO: Update blank fragment layout -->
