--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -5,36 +5,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/backgroundwhite"
     tools:context="com.example.lenovo.myfinance.Fragments.Reports_fragment">
+
+
     <LinearLayout
-
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/reports_tablayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="2">
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/piechart_transactions"
-                android:elevation="10dp"
-                android:padding="10dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/linechart_transactions"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
-
+            android:layout_height="wrap_content"
+            android:elevation="10dp"
+            app:tabTextColor="@color/white"
+            app:tabIndicatorHeight="0dp"
+            app:tabIndicatorColor="@color/darkturq"
+            android:background="@drawable/layout_shape"/>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/reports_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
-
-    <!-- TODO: Update blank fragment layout -->
 
 
 </FrameLayout>
