multiple accounts adapter done

--- a/app/src/main/res/layout/dialog_add_category.xml
+++ b/app/src/main/res/layout/dialog_add_category.xml
@@ -8,6 +8,9 @@
         android:padding="5dp"
         android:background="@drawable/calculator_button"
         android:id="@+id/category_name_edittext"
+        android:maxLines="1"
+        android:inputType="text"
+        android:ellipsize="end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
