--- a/app/src/main/res/layout/individual_category_detail.xml
+++ b/app/src/main/res/layout/individual_category_detail.xml
@@ -42,17 +42,18 @@
                 android:layout_toRightOf="@id/main_category_image"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:text="latest insert:"
+                android:text="saving goal:"
                 android:padding="2dp"
                 android:textSize="12sp" />
             <TextView
-                android:id="@+id/latest_insert_date"
+                android:id="@+id/saving_goal_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/latest_insert_text"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="20dp"
-                android:text="April 18 2018"
+                android:text="1000"
+                android:textStyle="bold"
                 android:padding="2dp"
                 android:textSize="12sp" />
 
