--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -19,17 +19,17 @@
             android:textColor="@color/white"
             android:background="@drawable/layout_shape"
             android:gravity="center"/>
-        <!--<Button-->
-            <!--android:id="@+id/add_account_button"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@drawable/button_shape"-->
-            <!--android:padding="5dp"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_marginBottom="10dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:text="Add new Account"/>-->
+        <Button
+            android:id="@+id/add_account_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Add new Account"/>
 
         <android.support.v7.widget.RecyclerView
             android:layout_marginLeft="10dp"
@@ -40,16 +40,16 @@
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
-    <android.support.design.widget.FloatingActionButton
-        android:src="@drawable/ic_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right|"
-        android:layout_marginBottom="50dp"
-        android:layout_marginRight="10dp"
-        android:backgroundTint="@color/colorPrimaryDark"
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:src="@drawable/ic_add"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|right|"-->
+        <!--android:layout_marginBottom="50dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:backgroundTint="@color/colorPrimaryDark"-->
 
-        />
+        <!--/>-->
 
 
 
