--- a/app/src/main/res/layout/income_category_layout.xml
+++ b/app/src/main/res/layout/income_category_layout.xml
@@ -6,23 +6,56 @@
     android:padding="10dp"
     android:elevation="5dp"
     android:layout_marginBottom="5dp"
-
+    android:weightSum="3"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ImageView
-        android:id="@+id/category_image_imageview"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="5dp"
-        android:elevation="5dp"
-        android:src="@drawable/category_shape"/>
-    <TextView
-        android:id="@+id/income_category_name"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="category name"
-        android:textSize="20sp"
+        android:layout_weight="2"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        />
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/category_image_imageview"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:src="@drawable/category_shape"/>
+        <TextView
+            android:id="@+id/income_category_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="category name"
+            android:textSize="20sp"
+
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+       android:layout_weight="1"
+        android:padding="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Left to SAVE:"
+            android:textStyle="bold"
+            android:layout_marginBottom="5dp"
+
+           />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1000.0"
+            android:background="@drawable/amount_back"
+            android:layout_gravity="center_horizontal"
+            android:padding="2dp"/>
+    </LinearLayout>
+
 </LinearLayout>
