--- a/app/src/main/res/layout/individual_account_detail.xml
+++ b/app/src/main/res/layout/individual_account_detail.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:text="Account Name"
             android:textStyle="bold"
-            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:layout_marginBottom="2dp"/>
         <ImageView
             android:id="@+id/accounticon_imageview"
